--- a/0.css
+++ b/0.css
@@ -1,18 +1,11 @@
-.child {
+.x8j42SK7jCZIAjmv9GsAC {
     background-color: red;
     color: white;
     margin: 20px;
     padding: 20px;
 }
 
-grandparent parent child .child {
-    background-color: green;
-    color: yellow;
-    margin: 20px;
-    padding: 20px;
-}
-
-parent child .child {
+grandparent parent .x8j42SK7jCZIAjmv9GsAC {
     background-color: blue;
     color: white;
     margin: 20px;
