--- a/1.css
+++ b/1.css
@@ -1,6 +1,6 @@
-._1Tpf_pubX37UZJzSR7S3P0 {
-    background-color: yellow;
-    color: purple;
+._2pc4LiqMRBqRasQ1clOEHk {
+    background-color: blue;
+    color: orange;
     margin: 20px;
     padding: 20px;
 }
