feat: slight tweaks

--- a/0.css
+++ b/0.css
@@ -1,6 +1,6 @@
 ._1Tpf_pubX37UZJzSR7S3P0 {
-    background-color: yellow;
-    color: purple;
+    background-color: #31608e;
+    color: #feffff;
     margin: 20px;
     padding: 20px;
 }
