--- a/1.css
+++ b/1.css
@@ -1,6 +1,6 @@
 ._2pc4LiqMRBqRasQ1clOEHk {
-    background-color: blue;
-    color: orange;
+    background-color: #eae7dc;
+    color: #e85a4f;
     margin: 20px;
     padding: 20px;
 }
