--- a/child.css
+++ b/child.css
@@ -1,6 +1,6 @@
 .x8j42SK7jCZIAjmv9GsAC {
-    background-color: red;
-    color: white;
+    background-color: #46344e;
+    color: #faed26;
     margin: 20px;
     padding: 20px;
 }
